# numcom-project

./: README.md  anish_fourier.py  audio.py  fourier.py  fourier_file.py  lagrange.py  main.py  project.ipynb  project_p2.ipynb  pyproject.toml
